# Tchebycube_Adjoint

./: .gitignore  README.md  h5conv_cyl.py
Enstrophy_TC/: CMakeLists.txt  DAL_TC.f90  TC.slurm  lib_linesearch.py  lin_visu_TC.f90  optimize_TC.py  run1.in  run_TC.in  run_TC_fun.in  run_lin_visu.in  run_visu.in  visu_TC.f90
Taylor_Couette/: .#test_dealiazing.f90  CMakeLists.txt  DAL_TC.f90  MMS-ns_cylindrical_ns.py  Sphere_Grad_Descent.py  TC.slurm  TC_adatra.slurm  bcp_DAL_TC.f90  bcp_lib_optimize.py  bcp_optimize_TC.py  lib_linesearch.py  lib_optimize.py  lib_util.py  m_udf_mms.f90  optimize_TC.py  prod.f90  run_TC.in  run_TC_fun.in  run_test.in  run_visu.in  test.py  test_dealiazing.f90  test_grad.f90  test_op.f90  test_prod.py  visu.slurm  visu_TC.f90
cheby-tools/spec_forge/: .#Post_proc.py  Inter.py  Post_proc.py  test_Post_proc.py
lin_TC/: CMakeLists.txt  DAL_TC.f90  DAL_lin.f90  LIN.slurm  TC.slurm  lib_optimize.py  optimize_LIN.py  optimize_TC.py  run_TC.in  run_TC_fun.in  run_visu.in  visu.slurm  visu_TC.f90
src/: #m_adjoint_tool_cyl.f90#  #m_navier_stokes_cyl.f90#  ._m_discr_tcheby.f90  CMakeLists.txt  CMakeLists.txt_bcp  FFTW3.f90  MMS-NS_cart_ttt.py  m_adjoint_tool.f90  m_adjoint_tool_cyl.f90  m_boundary_conditions.f90  m_discr_fourier.f90  m_discr_fourier_dft.f90  m_discr_tcheby.f90  m_discr_tcheby_dct.f90  m_fourier_transform.f90  m_gnuplot.f90  m_hdf5_ifce.f90  m_lap1d_fourier.f90  m_lap1d_fourier_dft.f90  m_lap1d_tcheby.f90  m_mesh.f90  m_mesh_base.f90  m_navier_stokes_cart.f90  m_navier_stokes_cyl.f90  m_navier_stokes_cyl.f90~  m_numerics.f90  m_operator_base.f90  m_operator_fourier.f90  m_operator_fourier_dft.f90  m_operator_tcheby.f90  m_quadrature.f90  m_snapshots.f90  m_solver_diag_base.f90  m_solver_diag_cart_fft.f90  m_solver_diag_cart_fft_cplx.f90  m_solver_diag_cart_fft_dft.f90  m_solver_diag_cart_ftt.f90  m_solver_diag_cart_hhh.f90  m_solver_diag_cart_hhi.f90~  m_solver_diag_cart_hhi_cplx.f90  (+10 more)
